Perform a bit of minor cleanup